--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,12 @@
-title: Your awesome title
-author: GitHub User
+title: Your awesome title (how baout no)
+author: REDACTED
 email: your-email@domain.com
 description: > # this means to ignore newlines until "baseurl:"
   Write an awesome description for your new site here. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
+  ooooooooooh GOOGLE SEES THIS eh. What's a feed.xml?
+theme: minima 
 
 # social links
 twitter_username: your-twitter-handle # DO NOT include the @ character, or else the build will fail!
